Fixed "Estimate" button padding and alignment in PoS calculator card

--- a/client/sass/_form.scss
+++ b/client/sass/_form.scss
@@ -4,7 +4,7 @@ button {
   border-radius: 3px;
   color: $grey-10-black;
   cursor: pointer;
-  margin: 7px 4px 2px 4px;
+  margin: 7px 0px 2px 0px;
   padding: 4px 16px;
 
   &:focus,
